--- a/loadprogress/build.gradle
+++ b/loadprogress/build.gradle
@@ -1,5 +1,15 @@
 apply plugin: 'com.android.library'
-
+apply plugin: 'maven'
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: "file:///home/lv/.m2/repository/")
+            pom.groupId = "com.sskj.lib"
+            pom.artifactId = "loading"
+            pom.version = "1.0.2"
+        }
+    }
+}
 android {
     compileSdkVersion 28
     defaultConfig {
